updated order_cat_service_impl