@@ -1,138 +1,136 @@
 package com.sunbeam.service.impl;
 
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.sunbeam.dao.CategoryDao;
-import com.sunbeam.dto.ApiResponse;
+import com.sunbeam.dao.ProductDao;
 import com.sunbeam.dto.CategoryDto;
 import com.sunbeam.entities.Category;
-import com.sunbeam.exception.ResourceNotFoundException;
+import com.sunbeam.entities.Product;
 import com.sunbeam.service.CategoryService;
-
-import lombok.AllArgsConstructor;
 
 @Service
 @Transactional
-@AllArgsConstructor
 public class CategoryServiceImpl implements CategoryService {
     
-    private final CategoryDao categoryDao;
-    private final ModelMapper modelMapper;
+    @Autowired
+    private CategoryDao categoryDao;
     
-    // GET methods - return DTOs for frontend
-    @Override
-    public CategoryDto getCategoryById(Long categoryId) {
-        Category category = categoryDao.findById(categoryId)
-                .orElseThrow(() -> new ResourceNotFoundException("Category not found with ID: " + categoryId));
-        return modelMapper.map(category, CategoryDto.class);
-    }
+    @Autowired
+    private ProductDao productDao;
     
-    @Override
-    public List<CategoryDto> getAllCategories() {
-        List<Category> categories = categoryDao.findAll();
-        return categories.stream()
-                .map(entity -> modelMapper.map(entity, CategoryDto.class))
-                .toList();
-    }
+    @Autowired
+    private ModelMapper modelMapper;
     
+    // Core: Add category with validation
     @Override
-    public Optional<CategoryDto> findCategoryByName(String name) {
-        return categoryDao.findByName(name)
-                .map(entity -> modelMapper.map(entity, CategoryDto.class));
-    }
-    
-    @Override
-    public List<CategoryDto> findCategoriesByNameContainingIgnoreCase(String name) {
-        List<Category> categories = categoryDao.findByNameContainingIgnoreCase(name);
-        return categories.stream()
-                .map(entity -> modelMapper.map(entity, CategoryDto.class))
-                .toList();
-    }
-    
-    @Override
-    public List<CategoryDto> findCategoriesByDescriptionContainingIgnoreCase(String description) {
-        List<Category> categories = categoryDao.findByDescriptionContainingIgnoreCase(description);
-        return categories.stream()
-                .map(entity -> modelMapper.map(entity, CategoryDto.class))
-                .toList();
-    }
-    
-    // Business logic methods
-    @Override
-    public boolean existsByName(String name) {
-        return categoryDao.existsByName(name);
-    }
-    
-    // POST/PUT/DELETE methods - return ApiResponse
-    @Override
-    public ApiResponse deleteCategory(Long categoryId) {
-        if (!categoryDao.existsById(categoryId)) {
-            return new ApiResponse("Category not found with ID: " + categoryId);
+    public CategoryDto addCategory(CategoryDto categoryDto) {
+        Category category = modelMapper.map(categoryDto, Category.class);
+        
+        if (categoryDao.existsByName(category.getName())) {
+            throw new RuntimeException("Category with name " + category.getName() + " already exists");
         }
-        categoryDao.deleteById(categoryId);
-        return new ApiResponse("Category deleted successfully");
+        
+        category.setCreatedAt(LocalDateTime.now());
+        Category savedCategory = categoryDao.save(category);
+        return modelMapper.map(savedCategory, CategoryDto.class);
     }
     
+    // Core: Update category
     @Override
-    public ApiResponse createCategory(CategoryDto categoryDto) {
-        if (categoryDao.existsByName(categoryDto.getName())) {
-            return new ApiResponse("Category with name " + categoryDto.getName() + " already exists");
+    public CategoryDto updateCategory(Integer categoryId, CategoryDto categoryDto) {
+        Optional<Category> existingCategory = categoryDao.findById(categoryId);
+        if (existingCategory.isEmpty()) {
+            throw new RuntimeException("Category not found with ID: " + categoryId);
         }
+        
+        Category existing = existingCategory.get();
+        Category category = modelMapper.map(categoryDto, Category.class);
+        
+        if (category.getName() != null) existing.setName(category.getName());
+        if (category.getDescription() != null) existing.setDescription(category.getDescription());
+        
+        Category savedCategory = categoryDao.save(existing);
+        return modelMapper.map(savedCategory, CategoryDto.class);
+    }
+    
+    // Essential CRUD methods
+    @Override
+    public CategoryDto save(CategoryDto categoryDto) { 
         Category category = modelMapper.map(categoryDto, Category.class);
         Category savedCategory = categoryDao.save(category);
-        return new ApiResponse("Category created successfully with ID " + savedCategory.getId());
+        return modelMapper.map(savedCategory, CategoryDto.class);
     }
     
     @Override
-    public ApiResponse updateCategory(Long categoryId, CategoryDto categoryDto) {
-        Category category = categoryDao.findById(categoryId)
-                .orElseThrow(() -> new ResourceNotFoundException("Category not found with ID: " + categoryId));
-        modelMapper.map(categoryDto, category);
-        categoryDao.save(category);
-        return new ApiResponse("Category updated successfully");
+    public Optional<CategoryDto> findById(Integer id) { 
+        Optional<Category> categoryOpt = categoryDao.findById(id);
+        return categoryOpt.map(category -> modelMapper.map(category, CategoryDto.class));
     }
     
     @Override
-    public List<CategoryDto> searchCategories(String searchTerm) {
-        List<Category> categories = categoryDao.findByNameContainingIgnoreCase(searchTerm);
-        return categories.stream()
-                .map(entity -> modelMapper.map(entity, CategoryDto.class))
-                .toList();
-    }
-    
-    // Basic CRUD operations from BaseService
-    @Override
-    public Category save(Category entity) {
-        return categoryDao.save(entity);
+    public List<CategoryDto> findAll() { 
+        return categoryDao.findAll().stream()
+                .map(category -> modelMapper.map(category, CategoryDto.class))
+                .collect(Collectors.toList());
     }
     
     @Override
-    public Optional<Category> findById(Long id) {
-        return categoryDao.findById(id);
+    public void deleteById(Integer id) { categoryDao.deleteById(id); }
+    
+    @Override
+    public boolean existsById(Integer id) { return categoryDao.existsById(id); }
+    
+    @Override
+    public long count() { return categoryDao.count(); }
+    
+    // Essential search methods
+    @Override
+    public Optional<CategoryDto> findByName(String name) { 
+        Optional<Category> categoryOpt = categoryDao.findByName(name);
+        return categoryOpt.map(category -> modelMapper.map(category, CategoryDto.class));
     }
     
     @Override
-    public List<Category> findAll() {
-        return categoryDao.findAll();
+    public boolean existsByName(String name) { return categoryDao.existsByName(name); }
+    
+//    @Override
+//    public long countByNameContaining(String name) { 
+//        return 0; 
+//    }
+//    
+    @Override
+    public void deleteCategory(Integer categoryId) {
+        Optional<Category> categoryOpt = categoryDao.findById(categoryId);
+        if (categoryOpt.isEmpty()) {
+            throw new RuntimeException("Category not found with ID: " + categoryId);
+        }
+        
+        Category category = categoryOpt.get();
+        List<Product> products = productDao.findByCategory_NameContainingIgnoreCase(category.getName());
+        if (!products.isEmpty()) {
+            throw new RuntimeException("Cannot delete category with existing products. Please reassign or delete products first.");
+        }
+        
+        categoryDao.deleteById(categoryId);
     }
     
     @Override
-    public void deleteById(Long id) {
-        categoryDao.deleteById(id);
+    public boolean validateCategoryName(String name) {
+        return name != null && !name.trim().isEmpty() && name.length() <= 50;
     }
     
-    @Override
-    public boolean existsById(Long id) {
-        return categoryDao.existsById(id);
-    }
-    
-    @Override
-    public long count() {
-        return categoryDao.count();
-    }
-} 
+//  @Override
+//  public List<CategoryDto> findByNameContaining(String name) { 
+//      // Since findByNameContainingIgnoreCase was removed, return empty list
+//      return List.of();
+//  }
+}
